总经理邮箱(意见反馈批复接口逻辑编写,调试);总经理邮箱(查看,待处理,已处理,list,detail,界面逻辑编写,调试)

--- a/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/View/YQGeneralManagerReplyView.xib
+++ b/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/View/YQGeneralManagerReplyView.xib
@@ -31,7 +31,7 @@
                         <constraint firstItem="oFh-EJ-lQg" firstAttribute="leading" secondItem="64a-p5-EGO" secondAttribute="leading" constant="15" id="y1E-uS-Sst"/>
                     </constraints>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="B4K-xZ-xwk">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="B4K-xZ-xwk">
                     <rect key="frame" x="0.0" y="40" width="397" height="120"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
